# ComfyUI-NakuNodes-QWen

./: README-en.md  README-zh.md  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  utils.py  workflow_example.json
locales/en/: nodeDefs.json
